--- a/firebase.json
+++ b/firebase.json
@@ -25,6 +25,12 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "function": "app"
+      }
     ]
   },
   "emulators": {
