--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   "main": "lib/index.js",
   "dependencies": {
     "ajv": "^8.11.2",
+    "cors": "^2.8.5",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^4.1.0"
   },
