--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,8 @@
   "main": "lib/index.js",
   "dependencies": {
     "ajv": "^8.11.2",
+    "ajv-errors": "^3.0.0",
+    "ajv-i18n": "^4.2.0",
     "cors": "^2.8.5",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^4.1.0"
