--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -12,12 +12,14 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: cd functions && npm ci && npm run build
+      - uses: "google-github-actions/auth@v0"
+        with:
+          workload_identity_provider: "projects/151006879681/locations/global/workloadIdentityPools/github-pool/providers/github-provider"
+          service_account: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_WOWTRADE }}'
       - uses: 'google-github-actions/deploy-cloud-functions@v1'
         with:
           name: 'app'
           runtime: 'nodejs16'
-          service_account: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_WOWTRADE }}'
-          workload_identity_provider: projects/151006879681/locations/global/workloadIdentityPools/github-pool/providers/github-provider
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
