--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -16,8 +16,7 @@ jobs:
         name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@v1'
         with:
-          workload_identity_provider: 'projects/151006879681/locations/global/workloadIdentityPools/github-pool/providers/github-provider'
-          service_account: 'github-actions-service-account@wowtrade.iam.gserviceaccount.com'
+          credentials_json: '${{ secrets.GOOGLE_SERVICE_ACCOUNT }}'
       - id: "deploy"
         uses: "google-github-actions/deploy-cloud-functions@v0"
         with:
