--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -21,6 +21,7 @@ jobs:
         uses: "google-github-actions/deploy-cloud-functions@v0"
         with:
           name: "app"
+          entry_point: "app"
           runtime: "nodejs16"
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
