--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -14,7 +14,7 @@ jobs:
         working-directory: functions
     steps:
       - uses: actions/checkout@v3
-      - run: cd functions && npm ci && npm run build
+      - run: npm ci && npm run build
       - id: 'auth'
         name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@v1'
