--- a/wowtrade/package.json
+++ b/wowtrade/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "18.0.9",
     "bootstrap": "^5.2.3",
     "next": "13.0.5",
+    "next-auth": "^4.17.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "18.2.0",
