--- a/functions/package.json
+++ b/functions/package.json
@@ -14,12 +14,17 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/passport": "^1.0.11",
+    "@types/passport-bnet": "^2.0.2",
     "ajv": "^8.11.2",
     "ajv-errors": "^3.0.0",
     "ajv-i18n": "^4.2.0",
     "cors": "^2.8.5",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^4.1.0"
+    "firebase-functions": "^4.1.0",
+    "passport": "^0.6.0",
+    "passport-accesstoken": "^0.1.0",
+    "passport-bnet": "^2.0.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0",
