--- a/functions/package.json
+++ b/functions/package.json
@@ -18,12 +18,14 @@
     "ajv-errors": "^3.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "express-session": "^1.17.3",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^4.1.0",
     "passport": "^0.6.0",
     "passport-bnet": "^2.0.0"
   },
   "devDependencies": {
+    "@types/express-session": "^1.17.5",
     "@types/passport": "^1.0.11",
     "@types/passport-bnet": "^2.0.2",
     "firebase-functions-test": "^0.2.0",
