--- a/functions/package.json
+++ b/functions/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "ajv": "^8.11.2",
     "ajv-errors": "^3.0.0",
+    "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express-session": "^1.17.3",
@@ -25,6 +26,7 @@
     "passport-bnet": "^2.0.0"
   },
   "devDependencies": {
+    "@types/connect-timeout": "^0.0.36",
     "@types/express-session": "^1.17.5",
     "@types/passport": "^1.0.11",
     "@types/passport-bnet": "^2.0.2",
