--- a/functions/package.json
+++ b/functions/package.json
@@ -17,9 +17,9 @@
     "ajv": "^8.11.2",
     "ajv-errors": "^3.0.0",
     "connect-timeout": "^1.9.0",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express-session": "^1.17.3",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^4.1.0",
     "passport": "^0.6.0",
@@ -27,7 +27,7 @@
   },
   "devDependencies": {
     "@types/connect-timeout": "^0.0.36",
-    "@types/express-session": "^1.17.5",
+    "@types/cookie-session": "^2.0.44",
     "@types/passport": "^1.0.11",
     "@types/passport-bnet": "^2.0.2",
     "firebase-functions-test": "^0.2.0",
