--- a/functions/package.json
+++ b/functions/package.json
@@ -23,13 +23,15 @@
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^4.1.0",
     "passport": "^0.6.0",
-    "passport-bnet": "^2.0.0"
+    "passport-bnet": "^2.0.0",
+    "passport-http-bearer": "^1.0.1"
   },
   "devDependencies": {
     "@types/connect-timeout": "^0.0.36",
     "@types/cookie-session": "^2.0.44",
     "@types/passport": "^1.0.11",
     "@types/passport-bnet": "^2.0.2",
+    "@types/passport-http-bearer": "^1.0.37",
     "firebase-functions-test": "^0.2.0",
     "typescript": "^4.5.4"
   },
