--- a/functions/package.json
+++ b/functions/package.json
@@ -20,10 +20,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^4.1.0"
+    "firebase-functions": "^4.1.0",
+    "node-fetch": "^3.3.0"
   },
   "devDependencies": {
     "@types/connect-timeout": "^0.0.36",
+    "@types/node-fetch": "^2.6.2",
     "firebase-functions-test": "^0.2.0",
     "typescript": "^4.5.4"
   },
