--- a/functions/package.json
+++ b/functions/package.json
@@ -16,12 +16,12 @@
   "dependencies": {
     "ajv": "^8.11.2",
     "ajv-errors": "^3.0.0",
+    "axios": "^1.2.0",
     "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^4.1.0",
-    "node-fetch": "^2.6.7"
+    "firebase-functions": "^4.1.0"
   },
   "devDependencies": {
     "@types/connect-timeout": "^0.0.36",
