--- a/wowtrade/package.json
+++ b/wowtrade/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "18.2.0",
+    "react-select": "^5.7.0",
     "swr": "^1.3.0",
     "typescript": "4.9.3"
   }
