--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -3,8 +3,34 @@
 
 name: Deploy to Firebase Hosting on PR
 'on': pull_request
+
 jobs:
-  build_and_preview:
+
+  deploy-functions:
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+    defaults:
+      run:
+        working-directory: functions
+    steps:
+      - uses: actions/checkout@v3
+      - run: npm ci && npm run build
+      - id: 'auth'
+        name: 'Authenticate to Google Cloud'
+        uses: 'google-github-actions/auth@v1'
+        with:
+          credentials_json: '${{ secrets.GOOGLE_SERVICE_ACCOUNT }}'
+      - id: "deploy"
+        uses: 'google-github-actions/deploy-cloud-functions@v1'
+        with:
+          name: "app-test"
+          entry_point: "app"
+          region: "us-central1"
+          runtime: "nodejs16"
+          source_dir: "functions"
+          project_id: "wowtrade"
+
+  deploy-hosting:
     if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
     runs-on: ubuntu-latest
     steps:
@@ -14,4 +40,5 @@ jobs:
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_WOWTRADE }}'
+          channelId: test
           projectId: wowtrade
