--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -29,3 +29,4 @@ jobs:
           runtime: "nodejs16"
           source_dir: "functions"
           project_id: "wowtrade"
+          env_vars: APP_ENV=test
