--- a/wowtrade/package.json
+++ b/wowtrade/package.json
@@ -12,6 +12,7 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "bootstrap": "^5.2.3",
+    "date-fns": "^2.29.3",
     "next": "13.0.5",
     "next-auth": "^4.17.0",
     "react": "18.2.0",
