--- a/.github/workflows/backend-preview.yml
+++ b/.github/workflows/backend-preview.yml
@@ -2,6 +2,7 @@
 # https://github.com/firebase/firebase-tools
 
 name: Deploy Backend - Preview
+concurrency: backend-preview
 'on':
   pull_request:
     paths:
