--- a/.github/workflows/backend-preview.yml
+++ b/.github/workflows/backend-preview.yml
@@ -2,7 +2,10 @@
 # https://github.com/firebase/firebase-tools
 
 name: Deploy Backend - Preview
-concurrency: backend-preview
+concurrency:
+  group: backend-preview
+  cancel-in-progress: true
+
 'on':
   pull_request:
     paths:
