Switch from paths to ignore-paths

--- a/.github/workflows/backend-merge.yml
+++ b/.github/workflows/backend-merge.yml
@@ -8,8 +8,8 @@ concurrency:
 
 'on':
   push:
-    paths:
-      - 'functions/**'
+    ignore-paths:
+      - 'wowtrade/**'
     branches:
       - backend
 jobs:
