--- a/.github/workflows/backend-preview.yml
+++ b/.github/workflows/backend-preview.yml
@@ -8,8 +8,8 @@ concurrency:
 
 'on':
   pull_request:
-    paths:
-      - 'functions/**'
+    ignore-paths:
+      - 'wowtrade/**'
     branches:
       - master
 
