--- a/wowtrade/package.json
+++ b/wowtrade/package.json
@@ -21,5 +21,8 @@
     "react-select": "^5.7.0",
     "swr": "^1.3.0",
     "typescript": "4.9.3"
+  },
+  "devDependencies": {
+    "sass": "^1.56.1"
   }
 }
