--- a/wowtrade/package.json
+++ b/wowtrade/package.json
@@ -8,9 +8,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.9",
     "bootstrap": "^5.2.3",
     "date-fns": "^2.29.3",
     "next": "13.0.5",
@@ -19,10 +16,13 @@
     "react-bootstrap": "^2.6.0",
     "react-dom": "18.2.0",
     "react-select": "^5.7.0",
-    "swr": "^1.3.0",
-    "typescript": "4.9.3"
+    "swr": "^1.3.0"
   },
   "devDependencies": {
-    "sass": "^1.56.1"
+    "@types/node": "^18.11.10",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "sass": "^1.56.1",
+    "typescript": "^4.9.3"
   }
 }
