--- a/functions/package.json
+++ b/functions/package.json
@@ -20,11 +20,13 @@
     "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "express-pino-logger": "^7.0.0",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^4.1.0"
   },
   "devDependencies": {
     "@types/connect-timeout": "^0.0.36",
+    "@types/express-pino-logger": "^4.0.3",
     "@types/node-fetch": "^2.6.2",
     "firebase-functions-test": "^0.2.0",
     "typescript": "^4.5.4"
