--- a/wowtrade/package.json
+++ b/wowtrade/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "cookie": "^0.5.0",
     "date-fns": "^2.29.3",
     "next": "13.0.5",
     "next-auth": "^4.17.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-select": "^5.7.0",
     "swr": "^1.3.0"
