35 provide only partial amount of reagents (#66)
* fix: Decrease memory usage of cloud functions by half

* feat: Listings can provide how much of a reagent they want to provide

* feat: Additional telemetry around database calls so I can see what's sucking up so much time

* feat: Define database connection once, rather than every time

* feat: Delete button should theoretically no longer be max width

* fix: Tweak button positioning

* fix: Tweak ping interval a bit upward

* fix: Refresh Wowhead links when switching buyer/seller toggle

* fix: Don't allow users to submit more reagents than recipe takes

* fix: Adjust programming to be more defensive

* fix: Theoretically fix number check

--- a/.github/workflows/backend-merge.yml
+++ b/.github/workflows/backend-merge.yml
@@ -37,3 +37,4 @@ jobs:
           source_dir: "functions"
           project_id: "wowtrade"
           env_vars: APP_ENV=production
+          memory_mb: 128
